JumpScript/tests/baselines/reference/twoAccessorsWithSameName2.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(2,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(2,16): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(3,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(3,16): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(7,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(7,16): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(8,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(8,16): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(12,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump(15,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/classes/propertyMemberDeclarations/twoAccessorsWithSameName2.jump (10 errors) ====
    class C {
        static get x() { return 1; }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~
!!! error TS2300: Duplicate identifier 'x'.
        static get x() { return 1; } // error
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class D {
        static set x(v) {  }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~
!!! error TS2300: Duplicate identifier 'x'.
        static set x(v) {  } // error
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class E {
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
        static set x(v) { }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }